--- a/login-security.html
+++ b/login-security.html
@@ -282,7 +282,7 @@
                                             <div class="_s1tlw0m">Login</div>
                                           </h1>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div style="margin-top: 24px">
                                             <div class="_hgs47m">
                                               <div class="va-top-h">
@@ -316,7 +316,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div style="margin-top: 24px">
                                             <div class="_hgs47m">
                                               <div class="va-top-h">
@@ -625,7 +625,7 @@
                                             </div>
                                           </h1>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
@@ -699,7 +699,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
@@ -762,7 +762,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
@@ -827,7 +827,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
@@ -893,7 +893,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_s50zru">
+                                        <div class="border-bottom-muted">
                                           <div class="row-condensed">
                                             <div class="_ibpnq6a">
                                               <div style="margin-top: 20px">
@@ -1415,7 +1415,7 @@
                                               <div class="_s1tlw0m">Login</div>
                                             </h2>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div style="margin-top: 24px">
                                               <div class="_hgs47m">
                                                 <div class="va-top-h">
@@ -1449,7 +1449,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div style="margin-top: 24px">
                                               <div class="_hgs47m">
                                                 <div class="va-top-h">
@@ -1774,7 +1774,7 @@
                                               </div>
                                             </h2>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
@@ -1852,7 +1852,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
@@ -1917,7 +1917,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
@@ -1984,7 +1984,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
@@ -2052,7 +2052,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_s50zru">
+                                          <div class="border-bottom-muted">
                                             <div class="row-condensed">
                                               <div class="_ibpnq6a">
                                                 <div style="margin-top: 20px">
