--- a/personal-info.html
+++ b/personal-info.html
@@ -274,7 +274,7 @@
                               </div>
                               <div class="_e296pg">
                                 <div></div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="legalName"
                                     aria-disabled="false"
@@ -319,7 +319,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="legalName"
                                     aria-disabled="false"
@@ -438,7 +438,7 @@
                                     </div>
                                   </form>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="gender"
                                     aria-disabled="false"
@@ -483,7 +483,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="gender"
                                     aria-disabled="false"
@@ -595,7 +595,7 @@
                                   </form>
                                 </div>
 
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="personal-info-fields-birthdate"
                                     aria-disabled="true"
@@ -641,7 +641,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="email"
                                     aria-disabled="false"
@@ -686,7 +686,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="email"
                                     aria-disabled="false"
@@ -771,7 +771,7 @@
                                     </div>
                                   </form>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="phoneNumbers"
                                     aria-disabled="false"
@@ -858,7 +858,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="phoneNumbers"
                                     aria-disabled="false"
@@ -953,7 +953,7 @@
                                   </form>
                                 </div>
                                 <div class="_dpy85y"></div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="personal-info-fields-identity"
                                     aria-disabled="false"
@@ -999,7 +999,7 @@
                                   </div>
                                 </div>
                                 <div id="cobrowse_exclude_address">
-                                  <div class="_s50zru">
+                                  <div class="border-bottom-muted">
                                     <div
                                       id="address"
                                       aria-disabled="false"
@@ -1044,7 +1044,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_s50zru">
+                                  <div class="border-bottom-muted">
                                     <div
                                       id="address"
                                       aria-disabled="false"
@@ -2178,7 +2178,7 @@
                                     </form>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="emergencyContacts"
                                     aria-disabled="false"
@@ -2223,7 +2223,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div
                                     id="emergencyContacts"
                                     aria-disabled="false"
@@ -3676,7 +3676,7 @@
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
                                     <div></div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="legalName"
                                         aria-disabled="false"
@@ -3721,7 +3721,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="legalName"
                                         aria-disabled="false"
@@ -3845,7 +3845,7 @@
                                         </div>
                                       </form>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="gender"
                                         aria-disabled="false"
@@ -3890,7 +3890,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="gender"
                                         aria-disabled="false"
@@ -4008,7 +4008,7 @@
                                         </div>
                                       </form>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="personal-info-fields-birthdate"
                                         aria-disabled="true"
@@ -4054,7 +4054,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="email"
                                         aria-disabled="false"
@@ -4099,7 +4099,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="email"
                                         aria-disabled="false"
@@ -4189,7 +4189,7 @@
                                         </div>
                                       </form>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="phoneNumbers"
                                         aria-disabled="false"
@@ -4277,7 +4277,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="phoneNumbers"
                                         aria-disabled="false"
@@ -4378,7 +4378,7 @@
                                       </form>
                                     </div>
                                     <div class="_dpy85y"></div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="personal-info-fields-identity"
                                         aria-disabled="false"
@@ -4424,7 +4424,7 @@
                                       </div>
                                     </div>
                                     <div id="cobrowse_exclude_address">
-                                      <div class="_s50zru">
+                                      <div class="border-bottom-muted">
                                         <div
                                           id="address"
                                           aria-disabled="false"
@@ -4469,7 +4469,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_s50zru">
+                                      <div class="border-bottom-muted">
                                         <div
                                           id="address"
                                           aria-disabled="false"
@@ -6156,7 +6156,7 @@
                                         </form>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="emergencyContacts"
                                         aria-disabled="false"
@@ -6201,7 +6201,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div
                                         id="emergencyContacts"
                                         aria-disabled="false"
