--- a/preferences.html
+++ b/preferences.html
@@ -269,7 +269,7 @@
                                 </div>
                               </div>
                               <div class="_e296pg">
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
@@ -301,7 +301,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
@@ -749,7 +749,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
@@ -783,7 +783,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
@@ -988,7 +988,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
@@ -1020,7 +1020,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_s50zru">
+                                <div class="border-bottom-muted">
                                   <div style="margin-top: 24px">
                                     <div class="_hgs47m">
                                       <div class="va-top-h">
@@ -1976,7 +1976,7 @@
                                 </div>
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
@@ -2010,7 +2010,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
@@ -2291,7 +2291,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
@@ -2325,7 +2325,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
@@ -2533,7 +2533,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
@@ -2567,7 +2567,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_s50zru">
+                                    <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
                                           <div class="va-top-h">
