--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -65,7 +65,7 @@
                 <div class="_1n1ozna" data-testid="lys-video-context-panel">
                   <div class="_flkdv3">
                     <video
-                      class="_e2l2kr"
+                      class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
                       autoplay=""
                       aria-label="A Host scrolls through an Airbnb listing on their mobile phone. Another Host talks while holding a note for guests. Finally, two Hosts discuss something they’re reviewing on a mobile phone."
