--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -78,7 +78,7 @@
                 <div class="_1n1ozna" data-testid="lys-video-context-panel">
                   <div class="_flkdv3">
                     <video
-                      class="_e2l2kr"
+                      class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
                       autoplay=""
                       aria-label="A Host waves from their living room and adjusts their sofa. Another Host takes a photo in their plant-filled space. Finally, two Hosts sit beside each other and wave hello."
