--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -65,7 +65,7 @@
                 <div class="_1n1ozna" data-testid="lys-video-context-panel">
                   <div class="_flkdv3">
                     <video
-                      class="_e2l2kr"
+                      class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
                       autoplay=""
                       aria-label="A Host uses their mobile phone to take a photo of a bedroom. Another Host leans over to get a good angle for a photo. And then two Hosts sit together, reviewing photos on a mobile phone."
