--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -62,7 +62,7 @@
                 <div class="_1n1ozna" data-testid="lys-video-context-panel">
                   <div class="_flkdv3">
                     <video
-                      class="_e2l2kr"
+                      class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
                       autoplay=""
                       aria-label="A Host fluffs curtains in a bedroom. Next, two Hosts wave and smile from their kitchen. And last, a Host smiles while sitting on their sofa."
