--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -62,7 +62,7 @@
                 <div class="_1n1ozna" data-testid="lys-video-context-panel">
                   <div class="_flkdv3">
                     <video
-                      class="_e2l2kr"
+                      class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
                       autoplay=""
                       aria-label="A Host proudly points to the outside of their place. Another Host folds a blanket while making a bed. Finally, two Hosts sit together, smiling and reviewing something on a mobile phone."
