--- a/help.html
+++ b/help.html
@@ -1456,7 +1456,7 @@
                                                 items.</span
                                               >
                                               <div class="_9fyhbr">
-                                                <div class="_1trgpf1">
+                                                <div class="image-container">
                                                   <ul
                                                     class="_16csp1v hide-scrollbar"
                                                     style="
