--- a/products.html
+++ b/products.html
@@ -350,7 +350,7 @@
                                           data-section-id="HERO_DEFAULT"
                                         >
                                           <div class="block">
-                                            <div class="_1trgpf1">
+                                            <div class="image-container">
                                               <ul
                                                 class="_rxz20bq hide-scrollbar"
                                                 style="
@@ -8671,7 +8671,7 @@
                                                               class="_100fji8"
                                                             >
                                                               <div
-                                                                class="_1emsdka"
+                                                                class="image-container"
                                                               >
                                                                 <button
                                                                   aria-label="Listing image 1, Show all photos"
@@ -8740,7 +8740,7 @@
                                                                 class="_100fji8"
                                                               >
                                                                 <div
-                                                                  class="_1emsdka"
+                                                                  class="image-container"
                                                                 >
                                                                   <button
                                                                     aria-label="Listing image 2, Show all photos"
@@ -8804,7 +8804,7 @@
                                                                 class="_100fji8"
                                                               >
                                                                 <div
-                                                                  class="_1emsdka"
+                                                                  class="image-container"
                                                                 >
                                                                   <button
                                                                     aria-label="Listing image 3, Show all photos"
@@ -8872,7 +8872,7 @@
                                                                 class="_100fji8"
                                                               >
                                                                 <div
-                                                                  class="_1emsdka"
+                                                                  class="image-container"
                                                                 >
                                                                   <button
                                                                     aria-label="Listing image 4, Show all photos"
@@ -8936,7 +8936,7 @@
                                                                 class="_100fji8"
                                                               >
                                                                 <div
-                                                                  class="_1emsdka"
+                                                                  class="image-container"
                                                                 >
                                                                   <button
                                                                     aria-label="Listing image 5, Show all photos"
