--- a/specific_trip.html
+++ b/specific_trip.html
@@ -245,7 +245,7 @@
                                                       class="_1kf12aj"
                                                       data-testid="reservation-dynamic-marquee-title-image"
                                                     >
-                                                      <div class="_1trgpf1">
+                                                      <div class="image-container">
                                                         <ul
                                                           class="_rxz20bq"
                                                           style="
