--- a/merchandising.html
+++ b/merchandising.html
@@ -47,8 +47,8 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="_is5jnq">
-                  <div class="_16grqhk">
+                <div class="page-shell-max-lg-plus">
+                  <div class="page-shell">
                     <main id="site-content">
                       <nav
                         class="_1tt196k"
@@ -213,7 +213,7 @@
                           >
                         </div>
                       </nav>
-                      <div tabindex="-1" class="_1i7ccu91">
+                      <div tabindex="-1" class="page-shell-mobile">
                         <div class="_1unac3l">
                           <div class="_1a5fl1v">
                             <div class="box-border">
