--- a/notifications.html
+++ b/notifications.html
@@ -45,7 +45,7 @@
                 "
               >
                 <div style="--page-shell-max-content-width: none">
-                  <div class="_16grqhk">
+                  <div class="page-shell">
                     <div class="_siy8gh"></div>
                     <main id="site-content">
                       <nav
