--- a/payment.html
+++ b/payment.html
@@ -46,8 +46,8 @@
                   --view-to-view-transition-element-visibility: hidden;
                 "
               >
-                <div class="_is5jnq">
-                  <div class="_16grqhk">
+                <div class="page-shell-max-lg-plus">
+                  <div class="page-shell">
                     <div class="_siy8gh">
                       <div class="c1yo0219 dir dir-ltr">
                         <div class="_88xxct">
