--- a/transaction_history.html
+++ b/transaction_history.html
@@ -407,7 +407,7 @@
                   data-testid="site-content"
                   id="site-content"
                 >
-                  <div class="_mwt4r90">
+                  <div class="page-container">
                     <div
                       style="
                         margin-top: 32px;
