--- a/specific_trip.html
+++ b/specific_trip.html
@@ -47,7 +47,7 @@
                 "
               >
                 <div style="--page-shell-max-content-width: 1600px">
-                  <div class="_16grqhk">
+                  <div class="page-shell">
                     <div class="_siy8gh">
                       <div class="c1yo0219 dir dir-ltr" style="">
                         <header class="header">
@@ -237,7 +237,7 @@
                                       <div class="w-100">
                                         <section>
                                           <div class="_18tkw86">
-                                            <div class="_mwt4r90">
+                                            <div class="page-container">
                                               <div style="margin: 0px">
                                                 <div class="_1ygqyztr">
                                                   <div>
